src/importer/relannis/snapshots/annatto__importer__relannis__tests__parse_relannis_workflow.snap
---
source: src/importer/relannis/tests.rs
expression: r.err().unwrap()
---
Import path does not exist: ./tests/workflows/../data/import/relannis/does-not-exist
